--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,35 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      https://ar.computrabajo.com/ofertas-de-trabajo...\n",
-       "1      https://ar.computrabajo.com/ofertas-de-trabajo...\n",
-       "2      https://ar.computrabajo.com/ofertas-de-trabajo...\n",
-       "3      https://ar.computrabajo.com/ofertas-de-trabajo...\n",
-       "4      Por favor indicanos tu remuneración bruta pret...\n",
-       "                             ...                        \n",
-       "900                       Edita tu carta de presentación\n",
-       "901                       Edita tu carta de presentación\n",
-       "902                       Edita tu carta de presentación\n",
-       "903                       Edita tu carta de presentación\n",
-       "904                       Edita tu carta de presentación\n",
-       "Name: 0, Length: 905, dtype: object"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.read_json('questions.json')[0]"
+    "conf = pd.read_json('config.json')\n",
+    "conf['limit_jobs'] = 50\n",
+    "conf.to_json('config.json')"
    ]
   },
   {
